Fixed dark mode and updated styling

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,11 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 h1 {
-  font-size: 4em;
+  font-size: 3.6em;
   margin-bottom: 0;
 }
 p, footer {
-  font-size: 1.5em;
+  font-size: 1.4em;
 }
 ul {
   padding: 0;
